--- a/css/Project.css
+++ b/css/Project.css
@@ -2,34 +2,45 @@
     margin: 0;
     padding: 0;
 }
-.parents{
+.parents_1{
     height: 300vh;
-    border-radius: 20px;
+    /*border-radius: 20px;
     border: 1px solid black;
-    margin: 40px;
+    /*margin: 40px;*/
+    
+}
+.main{
+    background-color: gray;
+    height: 90vh;
+    border-bottom-right-radius: 40px;
+    border-bottom-left-radius: 40px;
 }
 nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-left: 25px;
     margin-right: 25px;
 }
 .nav_1{
     display: flex;
+    align-items: center;
     gap: 20px;
+    margin-top: 25px;
+
 }
 .A{
     width: 50px;
     height: 25px;
     border-radius: 10px;
+   
 }
 .B{
     width: 50px;
     height: 25px;
     border-radius: 10px;
-}
+}  
 .img_logo{
       display: flex;
       justify-content: center;
@@ -49,7 +60,7 @@ nav{
     text-align: center;
     position: absolute;
     right: 39%;
-    top: 20%;
+    top: 22%;
     rotate: -5deg;
     background-color: white;
 
@@ -58,13 +69,122 @@ nav{
          text-align: center;
 }
 
-button{
-    width: 85px;
-    height: 30px;
+.button_1> button{
+    width: 95px;
+    height: 35px;
     border-radius: 50px;
     color: aliceblue;
     background-color: black;
     position: absolute; 
     left: 46%;
-    top: 50%;
+    top: 53%;
+}
+.parents_2{
+     display: flex;
+     justify-content: space-between;
+     text-align: center;
+     gap: 5px;
+     height: 150px;
+     border-bottom-right-radius: 40px;
+     border-bottom-left-radius: 40px;
+     margin-top: 80px;
+     margin-left: 35px;
+     margin-right: 35px;
+     
+    
+}
+.text_2{
+    text-align: center;
+    font-size: 30px;
+    margin-top: 30px;
+}
+
+.img_1{
+    width: 80px;
+    height: 40px;
+    margin-top: 10px;
+}
+.img_2{
+    width: 80px;
+    height: 70px;
+    
+}
+.img_3{
+    width: 80px;
+    height: 40px;
+    margin-top: 10px;
+}
+.img_4{
+    width: 100px;
+    height: 80px;
+}
+.img_5{
+    width: 70px;
+    height: 30px;
+    margin-top: 22px;
+}
+.img_6{
+    width: 90px;
+    height: 90px;
+}
+.parents_3{
+    
+    height: 90vh;
+    background-color: gray;
+    border:2px solid white;
+    border-bottom-right-radius: 40px;
+    border-bottom-left-radius: 40px;
+    
+}
+
+hr{
+    
+    margin-left: 90px;
+    margin-right: 80px;
+    margin-top: 50px;
+}
+.C>button{
+    width: 95px;
+    height: 35px;
+    border-radius: 50px;
+    color: black;
+    background-color: white;
+    position: absolute;
+    top: 153%;
+    left: 45%;
+    rotate: -5deg;
+    font-size: 15px;
+    
+}
+.parents_4{
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+    position: absolute;
+    top: 180%;
+    margin-left: 130px;
+
+}
+.img_7{
+   width:80px;
+   height:80px;
+}
+.img_8{
+    width:80px;
+    height:80px;
+ }
+ .img_9{
+    width: 80px;
+    height: 80px;
+ }
+ .img_10{
+    width:80px;
+    height:80px;
+    
+ }
+h3{
+    margin:  20px 0;
+}
+p{
+    margin: 20px 0px;
 }
