--- a/css/Project.css
+++ b/css/Project.css
@@ -2,13 +2,13 @@
     margin: 0;
     padding: 0;
 }
-.parents_1{
-    height: 300vh;
+/*.parents_1{
+    /*height: 300vh;
     /*border-radius: 20px;
     border: 1px solid black;
     /*margin: 40px;*/
     
-}
+
 .main{
     background-color: gray;
     height: 90vh;
@@ -45,6 +45,9 @@ nav{
       display: flex;
       justify-content: center;
 }
+.main_1{
+    padding: 40px 0px;
+}
 .img{
     width: 85px;
     height: 85px;
@@ -60,7 +63,7 @@ nav{
     text-align: center;
     position: absolute;
     right: 39%;
-    top: 22%;
+    top: 28%;
     rotate: -5deg;
     background-color: white;
 
@@ -77,32 +80,32 @@ nav{
     background-color: black;
     position: absolute; 
     left: 46%;
-    top: 53%;
+    top: 59%;
 }
 .parents_2{
      display: flex;
      justify-content: space-between;
-     text-align: center;
-     gap: 5px;
+     align-items: center;
      height: 150px;
      border-bottom-right-radius: 40px;
      border-bottom-left-radius: 40px;
-     margin-top: 80px;
+     padding: 50px 35px;
+     background-color: aliceblue;
+    /* margin-top: 60px;
      margin-left: 35px;
-     margin-right: 35px;
+     margin-right: 35px;*/
      
     
 }
 .text_2{
     text-align: center;
     font-size: 30px;
-    margin-top: 30px;
+   padding-top: 50px;
 }
 
 .img_1{
     width: 80px;
     height: 40px;
-    margin-top: 10px;
 }
 .img_2{
     width: 80px;
@@ -112,7 +115,7 @@ nav{
 .img_3{
     width: 80px;
     height: 40px;
-    margin-top: 10px;
+    
 }
 .img_4{
     width: 100px;
@@ -121,7 +124,7 @@ nav{
 .img_5{
     width: 70px;
     height: 30px;
-    margin-top: 22px;
+   
 }
 .img_6{
     width: 90px;
@@ -129,11 +132,11 @@ nav{
 }
 .parents_3{
     
-    height: 90vh;
+    height: 140vh;
     background-color: gray;
     border:2px solid white;
-    border-bottom-right-radius: 40px;
-    border-bottom-left-radius: 40px;
+   /* border-bottom-right-radius: 40px;*/
+    /*border-bottom-left-radius: 40px;*/
     
 }
 
@@ -141,7 +144,7 @@ hr{
     
     margin-left: 90px;
     margin-right: 80px;
-    margin-top: 50px;
+    margin-top: 70px;
 }
 .C>button{
     width: 95px;
@@ -150,7 +153,7 @@ hr{
     color: black;
     background-color: white;
     position: absolute;
-    top: 153%;
+    top: 164%;
     left: 45%;
     rotate: -5deg;
     font-size: 15px;
@@ -161,8 +164,8 @@ hr{
     justify-content: space-between;
     gap: 30px;
     position: absolute;
-    top: 180%;
-    margin-left: 130px;
+    top: 185%;
+    margin-left: 150px;
 
 }
 .img_7{
