--- a/css/Project.css
+++ b/css/Project.css
@@ -42,9 +42,9 @@ nav{
     border-radius: 10px;
 }  
 .A:hover{
-              scale: 1.2;
-              background-color: palevioletred;
-              transition: ease-out;
+    scale: 1.2;
+    background-color: palevioletred;
+    transition: ease-out;
 }
 .B:hover{
     scale: 1.2;
@@ -55,10 +55,10 @@ nav{
       display: flex;
       justify-content: center;
 }
-.img_logo:hover{
+/*.img_logo:hover{
         scale: 1.1;
         transition: ease-out;
-}
+}*/
 .main_1{
     padding: 40px 0px;
 }
@@ -76,9 +76,9 @@ nav{
     border-radius: 50px;
     text-align: center;
     position: absolute;
-    right: 39%;
-    top: 28%;
-    rotate: -5deg;
+    right: 40%;
+    top: 25%;
+    rotate: -9deg;
     background-color: white;
 
 }
@@ -94,13 +94,13 @@ nav{
     background-color: black;
     position: absolute; 
     left: 46%;
-    top: 59%;
+    top: 55%;
 }
-.button_1:hover{
+/*.button_1:hover{
     scale: 1.1;
     transition: ease-out;
 
-}
+}*/
 .parents_2{
      display: flex;
      justify-content: space-between;
@@ -203,9 +203,9 @@ hr{
     color: black;
     background-color: white;
     position: absolute;
-    top: 164%;
+    top: 158%;
     left: 45%;
-    rotate: -5deg;
+    rotate: -7deg;
     font-size: 15px; 
 }
 .C>button:hover{
@@ -218,9 +218,9 @@ hr{
 .parents_4{
     display: flex;
     justify-content: space-between;
-    gap: 30px;
+    gap: 90px;
     position: absolute;
-    top: 185%;
+    top: 250%;
     margin-left: 150px;
 
 }
@@ -262,4 +262,210 @@ h3{
 }
 p{
     margin: 20px 0px;
+}
+@media(max-width:768px){
+    .main{
+        background-color: gray;
+        height: 116vh;
+        border-bottom-right-radius: 20px;
+        border-bottom-left-radius: 20px;
+    }
+    img{
+        width: 85px;
+        height: 85px;
+       /* border-radius: 50px;
+        border: 1px solid black;*/
+        
+    }
+    .imgtext{
+        width: 110px;
+        height: 20px;
+        border: 1px solid black;
+        border-radius: 50px;
+        text-align: center;
+        position: absolute;
+        right: 32%;
+        top: 41%;
+        rotate: -11deg;
+        background-color: white;
+    
+    }
+    .text_1{
+             text-align: center;
+             padding: 18px 0px;
+    }
+    .button_1> button{
+        width: 95px;
+        height: 35px;
+        border-radius: 50px;
+        color: aliceblue;
+        background-color: black;
+        position: absolute; 
+        left: 42%;
+        top: 93%;
+    }
+    A{
+        width: 50px;
+        height: 25px;
+        border-radius: 10px;
+       
+    }
+    .B{
+        width: 50px;
+        height: 25px;
+        border-radius: 10px;
+    }  
+    .A:hover{
+        scale: 1.2;
+        background-color: palevioletred;
+        transition: ease-out;
+    }
+    .B:hover{
+        scale: 1.2;
+        background-color: palevioletred;
+        transition: ease-out;
+    }
+    .parents_3{
+    
+        height: 247vh;
+        background-color: gray;
+        border:2px solid white;
+       /* border-bottom-right-radius: 40px;*/
+        /*border-bottom-left-radius: 40px;*/
+        
+    }
+    .parents_2{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 150px;
+        border-bottom-right-radius: 40px;
+        border-bottom-left-radius: 40px;
+        padding: 50px 35px;
+        background-color: aliceblue;
+       /* margin-top: 60px;
+        margin-left: 35px;
+       margin-right: 35px;*/      
+}
+.img_1{
+    width: 80px;
+    height: 40px;
+}
+.img_1:hover{
+    scale: 1.2;
+    transition: ease-out;
+    rotate: 9deg;
+}
+.img_2{
+    width: 80px;
+    height: 70px;
+    
+}
+.img_2:hover{
+    scale: 1.2;
+    transition: ease-out;
+    rotate: 9deg;
+}
+.img_3{
+    width: 80px;
+    height: 40px;
+    
+}
+.img_3:hover{
+    scale: 1.2;
+    transition: ease-out;
+    rotate: 9deg;
+}
+.img_4:hover{
+    scale: 1.2;
+    transition: ease-out;
+    background-color: cadetblue;
+    rotate: 9deg;
+}
+.img_5{
+    width: 70px;
+    height: 30px;
+   
+}
+.img_5:hover{
+    scale: 1.2;
+    transition: ease-out;
+    rotate: 9deg;
+}
+.img_6{
+    width: 90px;
+    height: 90px;
+}
+.img_6:hover{
+    scale: 1.2;
+    transition: ease-out;
+    rotate: 9deg;
+}
+.img_7{
+    width:80px;
+    height:80px;
+ }
+ .img_7:hover{
+     scale: 1.3;
+     transition: ease-out;
+ }
+ .img_8{
+     width:80px;
+     height:80px;
+  }
+  .img_8:hover {
+     scale: 1.3;
+     transition: ease-out;
+  }
+  .img_9{
+     width: 80px;
+     height: 80px;
+  }
+ .img_9:hover{
+     scale: 1.3;
+     transition: ease-out;
+ }
+  .img_10{
+     width:80px;
+     height:80px;
+     
+  }
+  .img_10:hover {
+    scale: 1.3;
+    transition: ease-out;
+ }
+h3{
+    margin:  25px 0;
+}
+p{
+    margin: 25px 0px;
+}
+.C>button{
+    width: 95px;
+    height: 35px;
+    border-radius: 50px;
+    color: black;
+    background-color: white;
+    position: absolute;
+    top: 224%;
+    left: 45%;
+    rotate: -9deg;
+    font-size: 15px; 
+}
+.C>button:hover{
+    scale: 1.2;
+    background-color: blueviolet;
+    color: aliceblue;
+    transition: ease-out;
+    
+}
+.parents_4{
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
+    position: absolute;
+    top: 225%;
+    margin: 100px 100px;
+
+}
 }
