--- a/css/website2.css
+++ b/css/website2.css
@@ -3,6 +3,7 @@
 body{
     background-image: url(../Coffee\ background.jpeg);
     background-size: cover;
+    background-attachment: fixed;
    /* background-repeat: no-repeat; */
 }
 *{
