--- a/css/aafiya.css
+++ b/css/aafiya.css
@@ -291,7 +291,7 @@ input {
     display: flex;
     width: 200%;
     gap: 30px;
-    
+    margin: 40px 0px;
 }
 .boxchild_1{
     width: 90%;
@@ -335,7 +335,7 @@ h4{
 .boxchild_2{
     width: 90%;
     height: 313px;
-    border: 1px solid gray;
+    border: 1px solid #808080;
     
 }
 
@@ -368,7 +368,27 @@ h4{
     border-radius: 40px;
     border: 1px solid black;
 }
+.pagination-dots {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+    gap: 10px;
 
+  }
+  
+  .dot {
+    height: 10px;
+    width: 10px;
+    background-color: #d3cfff;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.3s;
+  }
+  
+  .dot.active {
+    background-color: #2bb5f9; 
+  }
 .text>input{
 
     width: 95%;
@@ -395,10 +415,10 @@ h4{
 }
 .parents5{
      
-    background-color: skyblue;
+    background-color: rgb(202,235,249);
     width: 100%;
-    height: 400px;
-    margin: 10px 0px;
+    height: 560px;
+    margin: 40px 0px;
 }
 .footer-1{
     text-align: center;
@@ -408,16 +428,66 @@ h4{
     color: red;
 }
 .span4{
-    color: blue;
+    color: rgb(55,168,213);
 }
 .footer-2{
     display: flex;
     justify-content: space-between;
     margin: 10px 70px;
 }
-.docter
 .D1{
-    width: 200px;
-    height: 50px;
-    border: 1px solid black;
+    width: 190px;
+    height: 145px;
+    background-color: rgb(252,181,193);
+    margin: 10px 10px;
+    padding: 10px 20px;
+    
+
+}
+.D2{
+    color: red;
+    font-style: italic;
+    font-size: 18px;
+    font-weight: bold;
+    padding:10px 52px;
+}
+.doctor-1{
+    width: 248px;
+    height: 274px;
+    box-shadow: 5px 5px 5px white;
+    background-color: whitesmoke;
+    border: 1px solid white;
+}
+.c1{
+    
+    padding: 0px 29px;
+    
+}
+.c2{
+    color: gray;
+    margin: 9px 51px;
+    font-size: 13px;
+}
+.card{
+    margin: 10px 15px;
+}
+.pagination-dots-1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    gap: 10px;
+  }
+  
+  .dot {
+    height: 10px;
+    width: 10px;
+    background-color: #d3cfff;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.3s;
+  }
+  
+  .dot.active {
+    background-color: rgb(55,168,213);;
 }
