--- a/css/aafiya.css
+++ b/css/aafiya.css
@@ -491,3 +491,82 @@ h4{
   .dot.active {
     background-color: rgb(55,168,213);;
 }
+.parents6{
+    text-align: center;
+    margin: 50px 0px;
+}
+.A1{
+    color: red;
+    font-style:italic;
+    font-weight: bold;
+    font-size: 30px;
+}
+.doctor-3{
+    font-size: 40px;
+}
+h2>.card4{
+    color: hsl(240, 100%, 50%);
+    font-size: 40px;
+}
+.imgcard_1{
+    border: 2px dashed red;
+    width: 318px;
+    height: 340px;
+    border-radius: 3px;
+    font-weight: 10px;
+}
+.img-13{
+    width: 317px;
+    height: 240px;
+    border-radius: 4px;
+}
+.doctor-4{
+    padding: 5px 58px;
+    font-size: 30px;
+}
+.doctor-6{
+    font-size: 25px;
+    padding: 5px 58px;
+}
+.doctor-5{
+    padding: 7px 99px;
+    color: red;
+    font-style: italic;
+    font-size: 23px;
+    font-weight: bold;
+}
+.parents7{
+    display: flex;
+    margin: 10px 60px;
+    gap: 10px;
+}
+.pagination-dots-2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 35px;
+    gap: 10px;
+  }
+  
+  .dot {
+    height: 10px;
+    width: 10px;
+    background-color: #d3cfff;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.3s;
+  }
+  
+  .dot.active {
+    background-color: rgb(55,168,213);;
+}
+.doctor-7{
+    font-weight: bold;
+    text-align: center;
+    margin: 30px 0px;
+    font-size: 17px;
+
+}
+u{
+    color: red;
+}
