--- a/css/aafiya.css
+++ b/css/aafiya.css
@@ -5,9 +5,9 @@
 .parents{
     display: flex;
     justify-content: space-between;
-    margin-top: 5px;
+    margin: 3px 24px;
     height: 78px;
-    border: 1px solid blue;
+   /* border: 1px solid blue;*/
 }
 
 .child3{
@@ -60,27 +60,27 @@
 
 }
 .img-1{
-     height: 80px;
+     height: 78px;
      width: 184px;
      margin: 0px 5px;
 }
 .img-2{
-    height: 71px;
+    height: 69px;
     width: 85px;
-    margin: 0px 5px;
+    margin: 2px 0px;
 }
 .img-3{
     height: 44px;
-    width: 50px;
+    width: 40px;
 }
 .img-4{
     height:35px;
-    width:50px;
+    width:35px;
     margin: 6px 5px;
 }
 .img-5{
     height:35px;
-    width: 55px;
+    width: 47px;
    margin: 4px 3px;
 }
 .img-6{
@@ -94,15 +94,16 @@
     gap: 30px;
     font-weight: bold;
     font-size: 17px;
+    padding: 15px 0px;
 }
 .child_2{
     display: flex;
     border: 1px solid skyblue;
     background-color: rgb(125, 163, 244);
     color: aliceblue;
-    padding-left: 0px;
+    padding: 0px 42px;
 }
-.D>input{
+.k>input{
     width:190px;
     height: 55px;
     margin-left: 40px;
@@ -111,6 +112,7 @@
     color: aliceblue;
     font-weight: bold;
     font-size: 22px;
+    border: 0px solid skyblue;
 }
 .parents2{
     background-image: url(../images/img3.jpeg);
@@ -130,8 +132,11 @@ span{
 }
 h1{
     font-size: 35px;
-    margin: 12px 0px;
+    margin: 25px 10px;
 
+}
+.sumit{
+    font-size: 30px;
 }
 .child_4{
     padding: 0px 50px;
@@ -146,15 +151,22 @@ h1{
 }
 .child_6>ul{
     display: flex;
-    gap: 20px;
+    gap: 25px;
     list-style: none;
-    height: 40px;
-    margin: 20px 0px;
-    border-bottom: 1px solid grey;
+    height: 45px;
+   margin: 0px 80px;
+   margin-top: 20px;
+    font-size: 14px;
+    font-weight: bold
+    
 }
-li:hover{
+  .nav_1{
+    border-bottom: 1px solid gray;
+  }
+
+/*li:hover{
     background-color: blue;
-}
+}*/
 .parents3{
     display: flex;
     justify-content: space-between;
@@ -167,12 +179,12 @@ li:hover{
    
 }
 .child_7{
-    margin: 15px 43px;
+    margin: 30px 52px;
 }
 .img-7{
-    width: 400px;
-    height: 300px;
-    margin: 20px 45px;
+    width: 390px;
+    height: 270px;
+    margin: 25px 50px;
 }
 .H{
     padding: 6px 0px;
@@ -192,7 +204,7 @@ hr{
     margin: 40px 0;
 }
 .child_11{
-    margin: 35px 0px;
+    margin: 35px 20px;
     width: 85%;
     height: 470px;
     border: 1px solid black;
@@ -316,6 +328,9 @@ input {
 h4{
     margin: 0px ;
 }
+.k1{
+    font-size: 15px;
+}
 .Z{
     display: flex;
     gap: 10px;
@@ -350,7 +365,7 @@ h4{
     gap: 60px;
 }
 .home-3{
-    margin: 10px 15px;
+    margin: 2px 15px;
 }
 .home-4{
     display: flex;
@@ -358,7 +373,7 @@ h4{
     padding: 20px 15px;
 }
 .home-6{
-    font-size: 18px;
+    font-size: 19px;
      font-weight: bold;
     margin: 5px 0px;
 }
@@ -454,7 +469,7 @@ h4{
 .doctor-1{
     width: 248px;
     height: 274px;
-    box-shadow: 5px 5px 5px white;
+    box-shadow: 0px 2px 15px rgba(0,0,0,0.4);
     background-color: whitesmoke;
     border: 1px solid white;
 }
@@ -569,4 +584,20 @@ h2>.card4{
 }
 u{
     color: red;
+}
+.parents8{
+    margin: 60px 0px;
+}
+.text-3{
+    text-align: center;
+    font-weight: bold;
+    font-size: 20px;
+}
+.text-4{
+    text-align: center;
+}
+.text-5{
+    display: flex;
+    justify-content: center;
+    gap: 40px;
 }
