--- a/css/aafiya.css
+++ b/css/aafiya.css
@@ -587,17 +587,46 @@ u{
 }
 .parents8{
     margin: 60px 0px;
+    background-color: rgb(70,162,210);
+    height: 265px;
+    color: aliceblue;
 }
 .text-3{
     text-align: center;
-    font-weight: bold;
-    font-size: 20px;
+    font-weight: 50px;
+    font-size: 25px;
+    padding-top: 40px;
 }
 .text-4{
     text-align: center;
+    margin: 8px 0px;
+    font-size: 45px;
 }
 .text-5{
     display: flex;
     justify-content: center;
-    gap: 40px;
+    gap: 15px;
+    margin: 20px 0px;
+}
+.text-6{
+border-left: 1px solid white;
+display: block;
+color: black;
+font-size: 15px;
+padding: 0px 10px;
+height: 50px;
+
+}
+.Bottun-1{
+    width: 170px;
+    height: 40px;
+    font-size: 15px;
+    background-color: blue;
+    color: aliceblue;
+    margin: 5px;
+}
+.text-7{
+    margin: 11px 0px;
+    color: whitesmoke;
+    font-size: 25px;
 }
