--- a/css/aafiya.css
+++ b/css/aafiya.css
@@ -795,7 +795,64 @@ height: 50px;
 
 /* This Media Query */
 
-@media(max-width:768px){
-           
+@media(max-width:460px){
+
+    .parents{
+    }
+    .p1,.p2,.p3,.p4,.p5,.p6{
+        display: none;
+    }
+    .child6{
+        display: none;
+    }
+    .child_3{
+            font-size:17px;
+            gap: 5px;
+            padding: 0px 20px;
+            padding-top: 25px
+            
+    }
+    .parents2{
+        background-position:center;
+        height:230px;
+    }
+    .E{
+        display: none;
+    }
+    .child_4{
+        padding:0  5px;
+        text-align: start;
+        font-size: 18px;
+        margin-left:10px;
+        
+    }
+    h1{
+     font-size: 32px;
+    }
+        .child_6>ul{
+             gap:15px;
+            height: 30px;
+           margin: 0px 20px;
+           margin-top: 10px;
+            font-size: 6.5px;
+            
+        }
+        .parents3{
+            display: flex;
+            flex-direction: column-reverse;
+        }
+        .p7{
+        margin:20px 15px;
+        }
+        .child_7{
+            margin:20px 15px;
+        }
+        .img-7 {
+            width: 350px;
+            height: 200px;
+            margin: 15px 18px;
+            
+        }
+        
+    }
     
-}
