--- a/css/nav.css
+++ b/css/nav.css
@@ -140,11 +140,13 @@ li:hover{
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  margin-right: 5px;
+ 
 }
 .box4{
-     width: 395px;
+     width: 390px;
      height: 171px;
      object-fit: cover;
+     margin-bottom: 5px;
      
      
 }
