--- a/css/Linear-gradient.css
+++ b/css/Linear-gradient.css
@@ -13,5 +13,5 @@
 .gradients_logo>img{
      width: 500px;
      height: 400xpx;
-     background: linear-gradient( black,blue);
+     background: linear-gradient( rgb(239, 5, 44) ,rgb(4, 165, 228));
 }
