--- a/css/masai.css
+++ b/css/masai.css
@@ -26,16 +26,16 @@
   }
   .parent {
     border: 1px solid #000;
-   /* height: 600px;
+   height: 600px;
     width: 100%;
     background-color:#eaf1f5;
-    clip-path: path("M50.5372 91.9404C67.7347 26.8469 25.5967 4.15342 1 1H689C645.215 13.5537 642.974 50.932 650.61 80.0338C654.819 96.0754 660.198 112.11 660.487 128.692C665.437 412.392 451.631 475.197 341 470.5C77.6592 455.806 34.2279 234.94 45.6348 115.458C46.3966 107.479 48.4897 99.6901 50.5372 91.9404Z");*/
+    clip-path: path("M50.5372 91.9404C67.7347 26.8469 25.5967 4.15342 1 1H689C645.215 13.5537 642.974 50.932 650.61 80.0338C654.819 96.0754 660.198 112.11 660.487 128.692C665.437 412.392 451.631 475.197 341 470.5C77.6592 455.806 34.2279 234.94 45.6348 115.458C46.3966 107.479 48.4897 99.6901 50.5372 91.9404Z");
   
   }
   
   
   
-  .parents-main2,.parents_main1{
+  .parents-main_2,.parents_main_1{
     width: 50%;
   }
   .parents-main2{
@@ -239,7 +239,7 @@
   
   /*This fist main parents for css*/
   
-  .parents_main {
+  .parents_main_1 {
     display: flex;
     font-size: 35px;
     font-weight: bolder;
